# datadisc

./: CMakeLists.txt  Kconfig  README.md  bm1422.conf  datadisc.conf  datadisc.conf.old  datadisc.emProject  datadisc_nrf5340_cpuapp.overlay  kx134.conf  pm.yml  pm_static.yaml  pm_static.yml  prj.conf  usb.overlay
boards/: datadisc.c  datadisc_nrf5340.overlay  datadisc_nrf5340_cpuapp.conf  datadisc_nrf5340_cpuapp.overlay
boards/arm/datadisc_nrf5340/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  datadisc_nrf5340_cpuapp.dts  datadisc_nrf5340_cpuapp.yaml  datadisc_nrf5340_cpuapp_defconfig  datadisc_nrf5340_cpunet-pinctrl.dtsi  datadisc_nrf5340_cpunet.dts  datadisc_nrf5340_cpunet.yaml  datadisc_nrf5340_cpunet_defconfig  datadisc_nrf5340_cpunet_reset.c  nrf5340_cpuapp_common-pinctrl.dtsi  nrf5340_cpuapp_common.dts  nrf5340_cpunet_reset.c
child_image/hci_rpmsg/boards/: datadisc_nrf5340_cpunet.conf
child_image/mcuboot/: prj.conf
child_image/mcuboot/boards/: datadisc_nrf5340_cpuapp.conf
drivers/: CMakeLists.txt
drivers/bm1422/: CMakeLists.txt  Kconfig  bm1422.c  bm1422.h  bm1422_trigger.c
drivers/bm1422/zephyr/: CMakeLists.txt  bm1422.c  bm1422.h  bm1422_trigger.c  module.yml
drivers/ch201/: CMakeLists.txt  ch201.c  ch201.h  ch201_gprstr.h  ch201_trigger.c
drivers/ch201/zephyr/: CMakeLists.txt  Kconfig  ch201_gprstr.c  ch201_gprstr_fw.c  module.yml
drivers/dts/bindings/: rohm,bm1422agmv.yaml
drivers/kx134/: CMakeLists.txt  Kconfig  kx134.c  kx134.h  kx134_trigger.c
drivers/kx134/zephyr/: kx134.c  kx134.h  kx134_trigger.c
dts/bindings/: kionix,kx134-1211-spi.yaml
hardware/gerbers/: DataDisc-macro.APR_LIB  DataDisc.EXTREP  DataDisc.GBL  DataDisc.GBO  DataDisc.GBP  DataDisc.GBS  DataDisc.GM1  DataDisc.GM8  DataDisc.GTL  DataDisc.GTO  DataDisc.GTP  DataDisc.GTS  DataDisc.REP  DataDisc.RUL  DataDisc.apr
src/: battery.c  datadisc_shell.c  datadisc_shell.h  main.c
temp/: Kconfig.datadisc  datadisc_nrf5340_cpuapp.conf  datadisc_nrf5340_cpuapp.overlay  pm_static_datadisc_nrf5340_cpuapp.yml  qspi.overlay
